--- a/WebContent/training/zul/brand_main_elistbox.zul
+++ b/WebContent/training/zul/brand_main_elistbox.zul
@@ -4,6 +4,35 @@
 	<panel height="100%">
 		<caption>
 			<label mlkey="traning.label.brand" multiline="true" />
+			<!--    畫面增加查詢按鈕，提供彈出窗口查詢功能   -->
+			<basebutton id="queryBtn" mode="query" />
+			<window id="queryWin" mlkey="baselib.btn.query"
+				visible="false" width="350px" height="190px">
+				<vlayout width="100%" height="100%">
+					<qgrid id="qgrid" vflex="1">
+						<columns>
+							<column width="40%" />
+							<column width="60%" />
+						</columns>
+						<rows>
+							<row>
+								<coltitle mlkey="traning.label.brandNo" />
+								<textbox fld="BRAND_NO" upper="true" />
+							</row>
+							<row>
+								<coltitle
+									mlkey="traning.label.brandName" />
+								<textbox fld="BRAND_NAME" />
+							</row>
+						</rows>
+					</qgrid>
+					<div align="center">
+						<basebutton id="cancelQueryBtn" mode="cancel" />
+						<basebutton id="confirmQueryBtn" mode="ok" />
+					</div>
+				</vlayout>
+			</window>
+			<!--    新增/修改/刪除/保存/放棄 按鈕  -->
 			<editbuttons id="masterEbtns" btns="AMDSC"></editbuttons>
 		</caption>
 		<panelchildren>
